--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,9 +2,11 @@
   "extends": "mixmax/node",
   "rules": {
     "no-var": "error",
-    "no-use-before-define": 0
+    "no-use-before-define": 0,
+    "prettier/prettier": "error"
   },
   "parserOptions": {
     "sourceType": "module"
-  }
+  },
+  "plugins": ["prettier"]
 }
