--- a/package.json
+++ b/package.json
@@ -14,15 +14,17 @@
     "@oclif/config": "^1.9.0",
     "@oclif/plugin-help": "^2.1.4",
     "cli-ux": "^4.9.3",
-    "eslint-config-mixmax": "^2.0.0",
     "lodash": "^4.17.11",
     "npm": "6.4.1",
     "read-package-tree": "^5.2.1",
     "semver": "^5.6.0"
   },
   "devDependencies": {
-    "eslint": "^5.9.0",
+    "@mixmaxhq/prettier-config": "^1.0.0",
+    "eslint": "^6.8.0",
+    "eslint-config-mixmax": "^4.5.0",
     "eslint-config-oclif": "^3.1.0",
+    "prettier": "^1.19.1",
     "rollup": "^0.67.3"
   },
   "engines": {
