--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@oclif/plugin-help": "^2.1.4",
     "cli-ux": "^4.9.3",
     "lodash": "^4.17.11",
-    "npm": "6.4.1",
+    "npm": "^6.14.9",
     "read-package-tree": "^5.2.1",
     "semver": "^5.6.0"
   },
